@@ -31,6 +31,7 @@ class FrontProtocol : public Protocol
       void Init(MRNetApp *FE);
       STREAM * Register_Stream(int up_transfilter_id, int up_syncfilter_id);
       STREAM * Register_Stream(string filter_name,    int up_syncfilter_id);
+      int Barrier();
 
    protected:
       int AnnounceStreams();
